fix: Round results wrapping

--- a/src/app/room/room.component.scss
+++ b/src/app/room/room.component.scss
@@ -20,7 +20,7 @@
 }
 
 .topics-sidenav {
-  width: min(90%, 400px);
+  width: min(90%, 450px);
   background: var(--light-background-color);
 }
 
